--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <!-- Compiled and minified CSS -->
   <link type="text/css" rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection" />
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=<%= VUE_APP_GOOGLE_API_KEY %>" async defer></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=<%= VUE_APP_GOOGLE_API_KEY %>" async defer></script>
 </head>
 
 <body>
